--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,7 +75,6 @@
                         android:hint="@string/login_tip_user"
                         android:inputType="text"
                         android:maxLength="11"
-                        android:text="@string/demoText"
                         android:textSize="18sp" />
                 </LinearLayout>
 
@@ -128,7 +127,6 @@
                         android:hint="@string/login_tip_pwd"
                         android:inputType="textPassword"
                         android:maxLength="18"
-                        android:text="@string/demoText"
                         android:textSize="18sp" />
                 </LinearLayout>
             </LinearLayout>
@@ -144,7 +142,7 @@
             android:text="@string/login_btn_text" />
 
         <TextView
-            android:id="@+id/tv_login"
+            android:id="@+id/tv_signup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
