--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -74,7 +74,6 @@
                         android:hint="@string/regist_tip_user"
                         android:inputType="text"
                         android:maxLength="11"
-                        android:text="@string/demoText"
                         android:textSize="18sp" />
                 </LinearLayout>
 
@@ -127,7 +126,6 @@
                         android:hint="@string/regist_tip_pwd1"
                         android:inputType="textPassword"
                         android:maxLength="18"
-                        android:text="@string/demoText"
                         android:textSize="18sp" />
                 </LinearLayout>
             </LinearLayout>
@@ -169,7 +167,6 @@
                         android:hint="@string/regist_tip_pwd2"
                         android:inputType="textPassword"
                         android:maxLength="18"
-                        android:text="@string/demoText"
                         android:textSize="18sp" />
                 </LinearLayout>
             </LinearLayout>
@@ -185,7 +182,7 @@
             android:text="@string/regist_btn_text" />
 
         <TextView
-            android:id="@+id/tv_regist"
+            android:id="@+id/tv_signin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
